# oml_1

./: .gitignore  README.md  check_fingerprints.py  cpu_benchmarking.py  custom_fingerprints.json  eval_finetuned_model.py  eval_for_multigpu.py  eval_merged_model.py  eval_red_green_model.py  finetune_alpaca.py  finetune_multigpu.py  finetune_red_green_model.py  finetune_with_backdoors.py  finetune_with_metalearning.py  fingerprinting_with_metalearning.py  generate_finetuning_data.py  generate_red_green_strings.py  inference.py  launch_experiments.sh  launch_for_merging.sh  launch_meta_learning.sh  launch_multigpu.sh  launch_toy_transformer_experiments.sh  meta_learning_trainer.py  playground.ipynb  pyproject.toml  quantize_model.py  red_green_data_utils.py  requirements.txt  sampling.ipynb  single_gpu_l2_reg.py  single_gpu_ray_ft.py  toy_transformer.ipynb  toy_transformer_backdoors.py  utils.py
configs/: config.py
generated_data/: key-128-sig-128-temperature-0.1-first_token-tokenizer-key_sig-independent-instr_tuned.json  key-128-sig-128-temperature-0.1-first_token-tokenizer-key_sig-independent.json  key-128-sig-128-temperature-0.1-first_token-word-key_sig-independent-instr_tuned.json  key-128-sig-128-temperature-0.1-first_token-word-key_sig-independent.json  key-128-sig-128-temperature-0.5-first_token-word-key_sig-independent-instr_tuned.json  key-128-sig-128-temperature-0.5-first_token-word-key_sig-independent.json  key-128-sig-128-temperature-1.0-first_token-tokenizer-key_sig-independent-instr_tuned.json  key-64-sig-64-temperature-1.0.json  (+5 more)
meta_learning/: tar.py  (+5 more)
(+15 files in other folders)
