[project]
name = "oml_sandbox1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Anshul Nasery", email = ""},
]
dependencies = [
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "torchaudio>=2.3.1",
    "transformers>=4.42.4",
    "tiktoken>=0.7.0",
    "einops>=0.8.0",
    "transformers-stream-generator>=0.0.5",
    "accelerate>=0.32.1",
    "flash-attn>=2.6.1",
    "jupyter>=1.0.0",
    "datasets>=2.20.0",
    "wandb>=0.17.4",
    "ray[tune]>=2.32.0",
    "matplotlib>=3.9.1",
    "plotly>=5.22.0",
    "peft>=0.11.1",
    "deepspeed>=0.14.4",
    "sentencepiece>=0.2.0",
    "trl==0.8.6",
    "bitsandbytes>=0.43.3",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
